@@ -2,6 +2,11 @@ This is the Change Log for PHPlot.
 The project home page is http://sourceforge.net/projects/phplot/
 -----------------------------------------------------------------------------
 
+2011-07-30 (lbayuk)     ===== Released as 5.5.0 =====
+    * phplot.php: Updated version comment and version constant
+    * README.txt: Updated for new release
+    * NEWS.txt: Add text for new release
+
 2011-07-28
     * Fixed problem found in testing with bubbles plot: data array
       with no Y,Z values at all got undefined property warnings.
